--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <td>
            <a href="#ccnt"><img src="adrishe.jpg" alt="Adrish's Image" width="300"></a> 
         </td>
-        <td> <p>Hey there its Adrish Pal on this side,I am a frontend web developer lerning the backend too I am realy excited to dosome new projects wth a great idea and a team.From India😊👌 </p> </td>
+        <td> <p>Hey there its Adrish Pal on this side,I am a frontend web developer lerning the backend too I am really excited to do some new projects wth a great idea and a team.From India😊👌 </p> </td>
      </tr>
 </table>
      <h1><b>Adrish Pal</b></h1>
