--- a/prj.html
+++ b/prj.html
@@ -8,14 +8,16 @@
 </head>
 <body>
   <h1 id="hedu">OPINION</h1>
+    <hr>
   <a target="_parent" href="index.html">BACK</a>
-  <hr> 
       <form action="">
         <h2>ENTER YOUR NAME</h2>
         <label for="">FIRST NAME</label>
-        <input type="text">
+        <input type="text"><br>
+          <br>
         <label for="">MIDDLE NAME</label>
-        <input type="text">
+        <input type="text"><br>
+          <br>
         <label for="">SURNAME</label>
         <input type="text">
         <br>
